# Amplified-Mouse-Pi-Pico-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  build.sh  config.h  config.yaml  configure.py  host_send_mice.py  instructions.md  main.c  pico_sdk_import.cmake  send_settings.py  settings.c  settings.h  tusb_config.h  usb_descriptors.c
config/: config.h  config.yaml
firmware/: amplified_mouse.uf2
include/: tusb_config.h  usb_descriptors.h
scripts/: configure.py  host_send_mice.py  send_settings.py  test_random_mice.py
src/: main.c  usb_descriptors.c
